<resources>


    <!--    Strings for Main activity-->

    <string name="app_name">TestingApp</string>
    <string name="id">ID 123 456 789</string>
    <string name="menu">Menu</string>
    <string name="grade">4.7</string>
    <string name="name">Alice Peterson</string>
    <string name="countries">Russian, English, German</string>
    <string name="NYC">New York city, USA</string>
    <string name="choose">Choose</string>
    <string name="rate_for_profile">3.5</string>
    <string name="cities_for_profile">Volgodonsk, Russia</string>
    <string name="language_for_profile">English, French</string>
    <string name="question">QUESTIONNAIRES</string>
    <string name="name_for_profile">Mary James</string>
    <string name="people">PEOPLE</string>
    <string name="wish">WISHES</string>
    <string name="about_me">About me</string>
    <string name="moments">Moments</string>
    <string name="chronicles">Chronicles</string>
    <string name="dream_and_get">Dream and get</string>
    <string name="edit_text">Жизнь будет гораздо проще и приятнее \nдля каждого человека, если мы будем</string>


    <!--    Strings for People Fragment-->

    <string name="people_title">People</string>
    <string name="karina">Карина Аримова</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe"> Unsubscribe</string>
    <string name="fragment_people_title">People</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Strings for People subFragments-->

    <string name="subscribers">SUBSCRIBERS</string>
    <string name="subscriptions">SUBSCRIPTIONS</string>
    <string name="mutually">MUTUALLY</string>

    <string name="search">Поиск товаров</string>

    <string name="action">Акции</string>


</resources>