<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/main_menu"
            app:navigationIcon="@drawable/ic_menu"
            app:title="@string/id"
            app:titleTextAppearance="@style/page_title" />


        <ImageView
            android:id="@+id/imageMain"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="100dp"
            android:background="@color/main"
            android:backgroundTint="@color/main"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:background="@drawable/elevation"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/imageMain"
            app:layout_constraintTop_toTopOf="@+id/imageMain">

            <TextView
                android:id="@+id/some_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="-5sp"
                android:text="@string/grade"
                android:textAppearance="@style/some_id" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="328dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="@color/second_white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageMain"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/countries"
            android:layout_width="230dp"
            android:layout_height="20dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="74dp"
            android:gravity="top"
            android:lineSpacingExtra="1sp"
            android:text="@string/countries"
            android:textAppearance="@style/countries"
            android:translationY="-0.53sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/language"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <ImageView
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="22.27dp"
            android:src="@drawable/ic_map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language" />

        <TextView
            android:id="@+id/NYC"
            android:layout_width="230dp"
            android:layout_height="20dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="74dp"
            android:gravity="top"
            android:lineSpacingExtra="1sp"
            android:text="@string/NYC"
            android:textAppearance="@style/countries"
            android:translationY="-0.53sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/map"
            app:layout_constraintTop_toBottomOf="@+id/countries" />

        <TextView
            android:id="@+id/Choose1"
            android:layout_width="54dp"
            android:layout_height="18dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/choose"
            android:textAppearance="@style/icon_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/countries"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/Choose2"
            android:layout_width="54dp"
            android:layout_height="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/choose"
            android:textAppearance="@style/icon_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/NYC"
            app:layout_constraintTop_toBottomOf="@+id/Choose1" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            tools:itemCount="4"
            tools:listitem="@layout/upper_block_items"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NYC" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



